Updated TEAM page. Updated Licenses various for 2025.

--- a/team.html
+++ b/team.html
@@ -117,7 +117,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Team</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -136,13 +136,13 @@
             <div class="member-info text-center">
               <h4>Matt Bartgis</h4>
               <span>Founder & Senior Advisor</span>
-              <p>Aliquam iure quaerat voluptatem praesentium possimus unde laudantium vel dolorum distinctio dire flow</p>
+              <!-- <p>Aliquam iure quaerat voluptatem praesentium possimus unde laudantium vel dolorum distinctio dire flow</p> -->
             </div>
           </div><!-- End Team Member -->
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="200">
             <div class="member-img">
-              <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/jordan-elkin.jpg" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
@@ -150,15 +150,15 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Jennifer Aniston</h4>
-              <span>Executive Assistant</span>
-              <p>Labore ipsam sit consequatur exercitationem rerum laboriosam laudantium aut quod dolores exercitationem ut</p>
+              <h4>Jordan Elkin</h4>
+              <span>Senior Writing Agent</span>
+              <!-- <p>Labore ipsam sit consequatur exercitationem rerum laboriosam laudantium aut quod dolores exercitationem ut</p> -->
             </div>
           </div><!-- End Team Member -->
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="300">
             <div class="member-img">
-              <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/haley-farnham.jpg" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
@@ -166,15 +166,15 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Tom Cruise</h4>
-              <span>Lead Agent</span>
-              <p>Illum minima ea autem doloremque ipsum quidem quas aspernatur modi ut praesentium vel tque sed facilis at qui</p>
+              <h4>Haley Farnham</h4>
+              <span>Writing Agent</span>
+              <!-- <p>Illum minima ea autem doloremque ipsum quidem quas aspernatur modi ut praesentium vel tque sed facilis at qui</p> -->
             </div>
           </div><!-- End Team Member -->
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="400">
             <div class="member-img">
-              <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/noah-redman.jpg" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
@@ -182,15 +182,15 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Anne Hathaway</h4>
-              <span>Agent</span>
-              <p>Magni voluptatem accusamus assumenda cum nisi aut qui dolorem voluptate sed et veniam quasi quam consectetur</p>
+              <h4>Noah Redman</h4>
+              <span>Writing Agent</span>
+              <!-- <p>Magni voluptatem accusamus assumenda cum nisi aut qui dolorem voluptate sed et veniam quasi quam consectetur</p> -->
             </div>
           </div><!-- End Team Member -->
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="500">
             <div class="member-img">
-              <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/isaac-mason-tenpenny.jpg" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
@@ -198,15 +198,15 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Brad Pitt</h4>
-              <span>Agent</span>
-              <p>Qui consequuntur quos accusamus magnam quo est molestiae eius laboriosam sunt doloribus quia impedit laborum velit</p>
+              <h4>Icaac Mason Tenpenny</h4>
+              <span>Writing Agent</span>
+              <!-- <p>Qui consequuntur quos accusamus magnam quo est molestiae eius laboriosam sunt doloribus quia impedit laborum velit</p> -->
             </div>
           </div><!-- End Team Member -->
 
           <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
             <div class="member-img">
-              <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/chris-coleman.jpg" class="img-fluid" alt="">
               <div class="social">
                 <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
@@ -214,9 +214,9 @@
               </div>
             </div>
             <div class="member-info text-center">
-              <h4>Angelina Jolie</h4>
-              <span>Agent</span>
-              <p>Sint sint eveniet explicabo amet consequatur nesciunt error enim rerum earum et omnis fugit eligendi cupiditate vel</p>
+              <h4>Chris Coleman</h4>
+              <span>Writing Agent</span>
+              <!-- <p>Sint sint eveniet explicabo amet consequatur nesciunt error enim rerum earum et omnis fugit eligendi cupiditate vel</p> -->
             </div>
           </div><!-- End Team Member -->
 
